<resources>
    <string name="app_name">Game</string>
    <string name="button_play">Play</string>
    <string name="button_rank">Rank</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About...</string>
    <string name="text_inicial">The game</string>
    <string name="text_play">The game</string>
    <string name="text_rank">The Rank</string>
    <string name="textDeveloper">Developer: Alvaro Salomoni</string>
    <string name="textExplain">" DAM2 student wokring on practica1 Android Project"</string>
    <string name="textEmail">email</string>
    <string name="textName">Name</string>
    <string name="button_photo">Change your pic</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_mapa">Map</string>
</resources>
